# Robot-Diagnostics

./: README.md
monitoring/monitoring_core/src/: monitor.cpp
monitoring/monitoring_msgs/: CMakeLists.txt
monitoring/monitoring_msgs/msg/: KeyValues.msg
robot_diagnostics/: CMakeLists.txt  package.xml  test.py
robot_diagnostics/backup/: analyser.cpp  diagnostics_client.cpp  diagnostics_server.cpp  example.txt  node_monitorNOTWORKING.cpp  rosbag_recorder.cpp  universal_subscriber____.cpp
robot_diagnostics/bags/: _2020-08-21-01-05-52.bag  _2020-08-21-01-06-05.bag.active  _2020-08-21-18-25-18.bag  _2020-08-21-18-25-42.bag  _2020-08-21-18-26-06.bag.active  _2020-08-22-13-04-23.bag  _2020-08-22-13-04-56.bag  _2020-08-22-13-05-29.bag.active  _2020-08-24-14-54-22.bag  _2020-08-24-14-54-55.bag  _2020-08-24-14-55-27.bag  _2020-08-24-14-55-59.bag  _2020-08-24-14-57-58.bag  _2020-08-24-14-58-31.bag.active  _2020-08-25-19-34-27.bag  _2020-08-25-19-35-00.bag  _2020-08-25-19-35-33.bag  _2020-08-25-19-36-06.bag  _2020-09-20-18-34-43_13.bag  _2020-09-20-18-35-43_14.bag  _2020-09-20-18-36-43_15.bag  _2020-09-20-18-37-43_16.bag  _2020-09-20-18-38-43_17.bag  _2020-09-20-18-39-43_18.bag.active
robot_diagnostics/cfg/: controller.cfg
robot_diagnostics/config/: analyser.yaml  diagnostics_aggregator.yaml  diagnostics_client.yaml  diagnostics_recovery.yaml  node_monitor.yaml  rosbag_recorder.yaml  sensor_monitor.yaml  standard.config  system_monitor.yaml  topic_monitor.yaml  xmlrpc.yaml
robot_diagnostics/include/: Math_Func.h  analyser.h  diagnostics_aggregator.h  diagnostics_client.h  diagnostics_recovery.h  diagnostics_server.h  minimal.h  node_monitor.h  node_processing.h  node_statistics.h  rosbag_recorder.h  sensor_monitor.h  sensor_statistics.h  system_monitor.h  system_statistics.h  testing.cpp  topic_monitor.h  topic_statistics.h  trajectory.h  utilities.h  utils.h
robot_diagnostics/launch/: default.launch  diagnostics_aggregator.launch  diagnostics_client.launch  diagnostics_recovery.launch  node_monitor.launch  robot_diagnostics.launch  rosbag_recorder.launch  sensor_monitor.launch  system_monitor.launch  topic_monitor.launch  xmlrpc.launch
robot_diagnostics/src/: diagnostics_aggregator.cpp  diagnostics_client.cpp  diagnostics_recovery.cpp  diagnostics_reovery.py  diagnostics_server.cpp  dummyBattery.cpp  dummyImu.cpp  dummyPublisher.cpp  minimal.cpp  node_monitor.cpp  node_processing.cpp  node_statistics.cpp  prioity.cpp  robot_diagnostics.cpp  rosbag_recorder.cpp  sensor_monitor.cpp  sensor_statistics.cpp  sync.cpp  system_monitor.cpp  system_statistics.cpp  topic_monitor.cpp  topic_statistics.cpp  trajectory.cpp  xmlrpc.cpp
robot_diagnostics/src/backup/: node_monitor.cpp  node_statistics.cpp
